--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* to avoid fixed position of navbar */
 body{
     margin-top: 72px;
-    background: linear-gradient(to right, #f8fafc, #e2e8f0, #cbd5e1);
+    background-color: lightcyan;
 }
 
 /* Co-ordinates page */
